[project]
name = "resume"
version = "0.1.0"
description = "guneet's resume"
authors = [
    {name = "Guneet Aggarwal",email = "guneetaggarwal@gmail.com"}
]
license = "MIT"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
